feat: Add blog section with detailed case studies
- Created _posts/ directory with detailed write-ups:
  * Globant - Ethics Award experience
  * Decisiv - 99% performance optimization case study
  * Michelin - Remote-first leadership
  * Euler Tools - Web3 startup journey
  * Motosierra Studio - Current AI game dev project
  * AWS Login Helper - DevOps CLI tool
  * Portfolio Website - This site's development

- Added blog listing page at /blog/
- Created post layout with responsive design
- Updated _config.yml with posts configuration
- Each post links from timeline and projects

--- a/_config.yml
+++ b/_config.yml
@@ -21,12 +21,18 @@ plugins:
   - jekyll-sitemap
   - jekyll-seo-tag
 
+# Posts
+permalink: /blog/:year/:month/:day/:title/
+
 # Collections
 collections:
   projects:
     output: false
   timeline:
     output: false
+  posts:
+    output: true
+    permalink: /blog/:year/:month/:day/:title/
 
 # Sass
 sass:
