Fix incorrect career information based on CV audit
CORRECTIONS MADE:

DELETED (doesn't exist):
- _posts/2016-01-01-globant-senior-engineer.md (period doesn't exist in CVs)

DELETED/REPLACED (wrong company):
- _posts/2015-05-01-agilityfeat-lead-developer.md → Renamed to DECISIV
  - Company was Decisiv (not AgilityFeat)
  - Location: Washington/Richmond, USA
  - Period: May 2015 - Sep 2018
  - NOT acquired by Michelin (corrected this error)

FIXED DATES:
- _posts/2019-06-01-uttopion-vr.md → 2023-06-01-uttopion-vr.md
  - Period: Jun 2023 - Jan 2024 (was incorrectly 2019)
  - Role: DevOps Consultant (was Lead Developer)
  - Location: Madrid, Spain

- _posts/2021-01-01-dcycle-blockchain.md → 2024-01-01-dcycle-blockchain.md
  - Period: 2024-2025 (was incorrectly 2021)
  - Role: DevOps Engineer & Infrastructure Architect

- _posts/2022-03-01-ipsy-senior-engineer.md → 2019-03-01-ipsy-devops-engineer.md
  - Period: Mar 2019 - Mar 2021 (was incorrectly 2022)
  - Role: DevOps Engineer (was Senior Software Engineer)
  - Location: San Francisco Bay Area
  - Note: Concurrent with Michelin role

CREATED NEW POSTS:
- _posts/2017-01-01-sinequix-founder.md
  - Sinequix Founder & CEO (2017-2019)
  - Staff augmentation company in Tandil, Argentina
  - Concurrent with Decisiv

- _posts/2025-01-01-tribbu-infrastructure.md
  - Tribbu Infrastructure Architect (2025)
  - GCP, OpenTofu/Terraform, Kubernetes

- _posts/2015-05-01-decisiv-lead-developer.md
  - Decisiv Lead Developer (fixing AgilityFeat error)

UPDATED FILES:
- _config.yml: Fixed timeline_events with correct companies, dates, and roles
- journal.md: Fixed all dates and company names, removed non-existent roles
- README.md: Added corrected career timeline table

KEY CORRECTIONS:
1. Decisiv (not AgilityFeat) - Period: May 2015 - Sep 2018
2. Michelin - Started AFTER Decisiv, NOT an acquisition
3. Ipsy - Mar 2019 - Mar 2021, DevOps Engineer (concurrent with Michelin)
4. Sinequix - Jan 2017 - Jul 2019 (concurrent with Decisiv)
5. Utt

--- a/_config.yml
+++ b/_config.yml
@@ -117,13 +117,37 @@ timeline_events:
     side: "left"
     current: true
     stats: ["AI/ML", "LLM Integration", "DevOps"]
+  - date: "2025"
+    title: "Tribbu"
+    role: "Infrastructure Architect"
+    description: "Cloud infrastructure on GCP. OpenTofu/Terraform, Kubernetes, cost optimization."
+    icon: "cloud"
+    color: "blue"
+    side: "right"
+    stats: ["GCP", "OpenTofu", "Kubernetes"]
+  - date: "2024-2025"
+    title: "Dcycle"
+    role: "DevOps Engineer & Infrastructure Architect"
+    description: "Web3 infrastructure, blockchain nodes, NFT marketplace DevOps."
+    icon: "rocket"
+    color: "purple"
+    side: "left"
+    stats: ["Web3", "Terraform", "AWS/GCP"]
+  - date: "2023-2024"
+    title: "Uttopion"
+    role: "DevOps Consultant"
+    description: "VR platform infrastructure. Madrid-based company. Backend and DevOps for VR content."
+    icon: "briefcase"
+    color: "cyan"
+    side: "right"
+    stats: ["VR", "AWS", "DevOps"]
   - date: "2023-2024"
     title: "Sharpei"
     role: "Lead Developer"
     description: "E-commerce solutions, PrestaShop plugin, Shopify app, AWS migration."
     icon: "briefcase"
     color: "cyan"
-    side: "right"
+    side: "left"
     stats: ["PrestaShop", "Shopify", "AWS"]
   - date: "2023"
     title: "Certchain"
@@ -131,7 +155,7 @@ timeline_events:
     description: "Built EVM blockchain forked from Ethereum. Solidity, React, Node.js on AWS."
     icon: "rocket"
     color: "purple"
-    side: "left"
+    side: "right"
     stats: ["EVM", "Solidity", "Blockchain"]
   - date: "2023"
     title: "MetaLab"
@@ -139,22 +163,24 @@ timeline_events:
     description: "Microservices, Kafka pipelines. Worked on Outlive, Politico, Proof of X protocol."
     icon: "building"
     color: "blue"
-    side: "right"
-    stats: ["Microservices", "Kafka", "AWS"]
-  - date: "2022"
-    title: "Ipsy"
-    role: "Senior Software Engineer"
-    description: "Beauty subscription e-commerce. Optimized subscription management for millions."
-    icon: "briefcase"
-    color: "yellow"
     side: "left"
+    stats: ["Microservices", "Kafka", "AWS"]
+  - date: "2019-2021"
+    title: "Ipsy"
+    role: "DevOps Engineer"
+    description: "Beauty subscription e-commerce. Concurrent with Michelin. Subscription infrastructure."
+    icon: "cloud"
+    color: "yellow"
+    side: "right"
+    badge: "Concurrent"
+    stats: ["DevOps", "AWS", "Kubernetes"]
   - date: "2019-2021"
     title: "BFA"
     role: "DevOps Engineer"
     description: "40M concurrent users. PostgreSQL to MongoDB migration."
     icon: "cloud"
     color: "green"
-    side: "right"
+    side: "left"
     badge: "40M Users"
     stats: ["DB Migration", "40M Users", "Kubernetes"]
   - date: "2020-2023"
@@ -163,47 +189,39 @@ timeline_events:
     description: "Web3 startup. Blockchain data platforms, DeFi integrations."
     icon: "rocket"
     color: "cyan"
+    side: "right"
+  - date: "2017-2019"
+    title: "Sinequix"
+    role: "Founder & CEO"
+    description: "Staff augmentation company in Tandil, Argentina. Concurrent with Decisiv."
+    icon: "building"
+    color: "purple"
     side: "left"
+    badge: "Founder"
+    stats: ["Consulting", "Team Building"]
   - date: "2018-2020"
     title: "Michelin NA"
     role: "Engineering Manager"
-    description: "Led remote-first engineering teams. Manufacturing digitalization."
+    description: "Led remote-first engineering teams. Manufacturing digitalization. Started AFTER Decisiv."
     icon: "briefcase"
     color: "yellow"
     side: "right"
   - date: "2015-2018"
-    title: "AgilityFeat"
+    title: "Decisiv"
     role: "Lead Software Developer"
-    description: "Grew team from 5 to 26. Decisiv projects. Acquired by Michelin."
+    description: "Fleet management platforms. Decisiv Vision and Builder. NOT acquired by Michelin."
     icon: "building"
-    color: "purple"
+    color: "green"
     side: "left"
-    badge: "Acquired"
-    stats: ["5 → 26 Team", "Michelin"]
-  - date: "2016-2017"
-    title: "Globant"
-    role: "Senior Software Engineer"
-    description: "LPL Acquimerge, Apartments.com API, Kafka pipelines. Mentoring."
-    icon: "building"
-    color: "blue"
-    side: "right"
-    stats: ["LPL", "Apartments.com", "Kafka"]
+    stats: ["Query: 8000ms → 70ms", "12,000 RPM scale", "40% cost reduction"]
   - date: "2015"
     title: "Globant"
     role: "Semi-Senior Developer"
     description: "Tribune CMS, millions of users. Ethics Award recipient."
     icon: "building"
-    color: "purple"
-    side: "left"
-    badge: "Ethics Award 2014"
-  - date: "May 2015"
-    title: "Decisiv Vision"
-    role: "Senior Developer"
-    description: "Fleet management optimization. 99% query improvement."
-    icon: "rocket"
-    color: "green"
+    color: "blue"
     side: "right"
-    stats: ["Query: 8000ms → 70ms", "12,000 RPM scale", "40% cost reduction"]
+    badge: "Ethics Award 2014"
   - date: "Oct 2012"
     title: "The Pivot"
     role: "Construction → Software"
